# W004_001

./: .gitignore  CMakeLists.txt  README.md  config.conf
cmake/: ok3506-toolchain.cmake
core/: main.c
core/console/: cli.c  cli.h  tty.c  tty.h
core/inc/: comm_mqtt.h  comm_service.h  comm_tcp.h  comm_udp.h  glob_cfg.h  glob_value.h  gnss_func.h  src_io.h  src_led.h  src_thread.h  src_tty.h
core/lib/quagga/: if.h  prefix.h  thread.h  version.h  zebra.h
core/src/: comm_mqtt.c  comm_service.c  comm_tcp.c  comm_udp.c  dbb_thread.c  eth_4g.c  gnss_nmea.c  gnss_raw.c  gnss_raw_decode.c  gnss_raw_info.c  gnss_thread.c  lora_thread.c  src_io.c  src_led.c  src_thread.c  src_tty.c
scripts/: build.sh  deploy_and_run_gdbserver.sh  ec800m_cn_online.sh  export_board_gpios.sh  remote_debug_server.sh  run_remote_debug.sh
src/: main.c
